// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin should add descriptions 1`] = `
Object {
  "content": "/** This is a description with /* characters that need to be escaped *\\\\/. */
export function createPostMock(props: Partial<Post> = {}): Post {
  return {
    __typename: \\"Post\\",
    title: null,
    ...props,
  };
}

/** This is a description for an input. */
export function createPostInputMock(props: Partial<PostInput> = {}): PostInput {
  return {
    title: null,
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should create factories for Query and Mutation 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    id: \\"\\",
    ...props,
  };
}

export function createQueryMock(props: Partial<Query> = {}): Query {
  return {
    __typename: \\"Query\\",
    users: [],
    ...props,
  };
}

export function createMutationMock(props: Partial<Mutation> = {}): Mutation {
  return {
    __typename: \\"Mutation\\",
    createUser: createUserMock({}),
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should create factories for inputs 1`] = `
Object {
  "content": "export function createPostInputMock(props: Partial<PostInput> = {}): PostInput {
  return {
    id: null,
    title: \\"\\",
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should create factories for unions 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    firstName: \\"\\",
    lastName: \\"\\",
    ...props,
  };
}

export function createDroidMock(props: Partial<Droid> = {}): Droid {
  return {
    __typename: \\"Droid\\",
    codeName: \\"\\",
    ...props,
  };
}

export function createHumanoidMock(props: Partial<Humanoid> = {}): Humanoid {
  switch(props.__typename) {
    case \\"User\\":
      return createUserMock(props);
    case \\"Droid\\":
      return createDroidMock(props);
    case undefined:
    default:
      return createHumanoidMock({ __typename: \\"User\\", ...props });
  }
}
",
  "prepend": Array [],
}
`;

exports[`plugin should create factories with built-in types 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    id: \\"\\",
    organizationId: null,
    email: \\"\\",
    name: null,
    age: 0,
    followers: null,
    geo: createGeoMock({}),
    isUser: false,
    isAdmin: null,
    status: UserStatus.Activated,
    favouriteFruit: null,
    posts: [],
    subscribers: null,
    ...props,
  };
}

export function createGeoMock(props: Partial<Geo> = {}): Geo {
  return {
    __typename: \\"Geo\\",
    lat: 0,
    lon: null,
    ...props,
  };
}

export function createPostMock(props: Partial<Post> = {}): Post {
  return {
    __typename: \\"Post\\",
    id: \\"\\",
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should customize the factory name 1`] = `
Object {
  "content": "export function newUser(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    id: \\"\\",
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should customize the input maybe value default 1`] = `
Object {
  "content": "export function createPostInputMock(props: Partial<PostInput> = {}): PostInput {
  return {
    title: undefined,
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should customize the maybe value default 1`] = `
Object {
  "content": "export function createPostMock(props: Partial<Post> = {}): Post {
  return {
    __typename: \\"Post\\",
    title: undefined,
    ...props,
  };
}

export function createPostInputMock(props: Partial<PostInput> = {}): PostInput {
  return {
    title: undefined,
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should customize the maybe value default and input maybe value default independently 1`] = `
Object {
  "content": "export function createPostMock(props: Partial<Post> = {}): Post {
  return {
    __typename: \\"Post\\",
    title: undefined,
    ...props,
  };
}

export function createPostInputMock(props: Partial<PostInput> = {}): PostInput {
  return {
    title: null,
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should disable descriptions 1`] = `
Object {
  "content": "export function createPostMock(props: Partial<Post> = {}): Post {
  return {
    __typename: \\"Post\\",
    title: null,
    ...props,
  };
}

export function createPostInputMock(props: Partial<PostInput> = {}): PostInput {
  return {
    title: null,
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should import types from other file 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<SharedTypes.User> = {}): SharedTypes.User {
  return {
    __typename: \\"User\\",
    id: \\"\\",
    ...props,
  };
}
",
  "prepend": Array [
    "import * as SharedTypes from './types.ts';
",
  ],
}
`;

exports[`plugin should support directives 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    id: null,
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should support enums with an underscore 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    role: UserRole.SuperAdmin,
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should support interfaces 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    id: \\"\\",
    username: \\"\\",
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should use enums as types 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    status: \\"Activated\\",
    ...props,
  };
}
",
  "prepend": Array [],
}
`;

exports[`plugin should use the custom scalar defaults 1`] = `
Object {
  "content": "export function createUserMock(props: Partial<User> = {}): User {
  return {
    __typename: \\"User\\",
    createdAt: new Date(),
    ...props,
  };
}
",
  "prepend": Array [],
}
`;
